# docs/swagger.json
@@ -112,10 +112,14 @@
                   "email": {
                     "type": "string",
                     "description": "user`s email",
+                    "format": "email",
+                    "maxLength": 128,
                     "example": "stepan@ukr.da"
                   },
                   "password": {
                     "type": "string",
+                    "minLength": 8,
+                    "maxLength": 128,
                     "description": "User`s password",
                     "example": 12345678
                   }
@@ -146,27 +150,21 @@
                       "example": "Successfully logged in an user!"
                     },
                     "data": {
-                      "type": "object",
-                      "required": [
-                        "accessToken"
-                      ],
-                      "properties": {
-                        "accessToken": {
-                          "type": "string",
-                          "description": "Token for access",
-                          "example": "5H4mA9kN4mMs5teK8gobAU4qblreV+DjjQby3kxz"
+                      "allOf": [
+                        {
+                          "$ref": "#/components/schemas/users"
                         },
-                        "name": {
-                          "type": "string",
-                          "description": "User name",
-                          "example": "Stepan Bandera"
-                        },
-                        "email": {
-                          "type": "string",
-                          "description": "User email",
-                          "example": "stepan@ukr.da"
+                        {
+                          "type": "object",
+                          "properties": {
+                            "accessToken": {
+                              "type": "string",
+                              "description": "JWT access token",
+                              "example": "r81biLR1/8pFGiMx8cl5Q+dYm7n+m1uqhOF0rr4r"
+                            }
+                          }
                         }
-                      }
+                      ]
                     }
                   }
                 }
@@ -465,6 +463,7 @@
                   "email": {
                     "type": "string",
                     "maxLength": 128,
+                    "format": "email",
                     "description": "user`s email",
                     "example": "steve@main.kraft"
                   },
@@ -1138,16 +1137,22 @@
         "properties": {
           "name": {
             "type": "string",
-            "description": "User's name",
+            "minLength": 3,
+            "maxLength": 16,
+            "description": "Users name",
             "example": "Stepan Bandera"
           },
           "email": {
             "type": "string",
-            "description": "User's email",
+            "maxLength": 128,
+            "pattern": "/.+@.+\\..+/",
+            "description": "Users email",
             "example": "stepan@ukr.da"
           },
           "password": {
             "type": "string",
+            "maxLength": 128,
+            "minLength": 8,
             "description": "User's password",
             "example": "step123an"
           }
@@ -1178,6 +1183,72 @@
             "type": "string",
             "description": "Token for access",
             "example": "5H4mA9kN4mMs5teK8gobAU4qblreV+DjjQby3kxz"
+          }
+        }
+      },
+      "users": {
+        "type": "object",
+        "required": [
+          "_id",
+          "name",
+          "email",
+          "favorites",
+          "ownRecipes",
+          "createdAt",
+          "updatedAt"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Users id",
+            "example": "685e5951b883f8c0dbc569a0"
+          },
+          "name": {
+            "type": "string",
+            "minLength": 3,
+            "maxLength": 16,
+            "description": "Users name",
+            "example": "Stepan Bandera"
+          },
+          "email": {
+            "type": "string",
+            "maxLength": 128,
+            "pattern": "/.+@.+\\..+/",
+            "description": "Users email",
+            "example": "stepan@ukr.da"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Contact created at",
+            "example": "2025-06-27T08:41:53.166Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Contact updated at",
+            "example": "2025-06-27T08:41:53.166Z"
+          },
+          "favorites": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "Mongo ObjectId",
+              "example": [
+                "6863cf88446815dd33f830c2",
+                "6863cf88446815dd33f830c3"
+              ]
+            }
+          },
+          "ownRecipes": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "Mongo ObjectId",
+              "example": [
+                "6863cf88446815dd33f830a1"
+              ]
+            }
           }
         }
       },
@@ -1247,85 +1318,17 @@
           }
         }
       },
-      "users": {
-        "type": "object",
-        "required": [
-          "_id",
-          "name",
-          "email",
-          "createdAt",
-          "updatedAt"
-        ],
-        "properties": {
-          "_id": {
-            "type": "string",
-            "description": "Users id",
-            "example": "685e5951b883f8c0dbc569a0"
-          },
-          "name": {
-            "type": "string",
-            "minLength": 3,
-            "maxLength": 16,
-            "description": "Users name",
-            "example": "Steve"
-          },
-          "email": {
-            "type": "string",
-            "maxLength": 128,
-            "pattern": "/.+@.+\\..+/",
-            "description": "Users email",
-            "example": "steve@main.kraft"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Contact created at",
-            "example": "2025-06-27T08:41:53.166Z"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Contact updated at",
-            "example": "2025-06-27T08:41:53.166Z"
-          },
-          "favorites": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "format": "Mongo ObjectId",
-              "example": [
-                "6863cf88446815dd33f830c2",
-                "6863cf88446815dd33f830c3"
-              ]
-            }
-          },
-          "ownRecipes": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "format": "Mongo ObjectId",
-              "example": [
-                "6863cf88446815dd33f830a1"
-              ]
-            }
-          }
-        }
-      },
       "ingredientsWithAmount": {
         "type": "object",
         "properties": {
-          "_id": {
+          "name": {
             "type": "string",
-            "example": "640c2dd963a319ea671e37aa"
-          },
-          "ingredient": {
-            "type": "string",
-            "description": "ID ingredient in Ingredients",
-            "example": "640c2dd963a319ea671e388a"
+            "description": "Name ingredient in Ingredients",
+            "example": "Olive Oil"
           },
           "measure": {
             "type": "string",
-            "example": "½ tsp"
+            "example": "120ml"
           }
         }
       },
