# src/controllers/auth.js
@@ -19,21 +19,23 @@ const setupSession = (res, session) => {
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
   setupSession(res, user);
-  
+
   res.status(201).json({
-    status: 201, 
+    status: 201,
     message: 'Successfully registered and logged a user!',
-    data: {name: user.name, email: user.email, accessToken: user.accessToken} ,
+    data: { name: user.name, email: user.email, accessToken: user.accessToken },
   });
 };
 
 export const loginUserController = async (req, res) => {
-  const user = await loginUser(req.body.email, req.body.password);
+  let user = await loginUser(req.body.email, req.body.password);
   setupSession(res, user);
+  user = user._doc;
+  delete user.password;
   res.status(200).json({
     status: 200,
     message: 'Successfully logged in an user!',
-    data: {name: user._doc.name, email: user._doc.email, favorites: user._doc.favorites, ownRecipes: user._doc.ownRecipes, accessToken: user.accessToken },
+    data: { ...user, accessToken: user.accessToken },
   });
 };
 
